fix overflow behaviour

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,6 @@
 
 html {
   overflow-x: hidden;
-  overscroll-behavior: none;
 }
 
 body {
@@ -14,7 +13,6 @@ body {
   min-height: 100dvh;
   font-family: 'Merriweather', serif;
   overflow-x: hidden;
-  overscroll-behavior: none;
 }
 
 * {
